istio/ambient/sandwich/eg/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: eg
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: eg-http-waypoint
  labels:
    istio.io/dataplane-mode: ambient
  annotations:
    networking.istio.io/service-type: ClusterIP
spec:
  gatewayClassName: eg
  infrastructure:
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: ingress
  listeners:
    - name: httpbin-fqdn
      hostname: httpbin.default.svc.cluster.local
      port: 8000
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: Same
    - name: httpbin-svc
      hostname: httpbin.default.svc
      port: 8000
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: Same
    - name: httpbin-namespace
      hostname: httpbin.default
      port: 8000
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: Same
    - name: httpbin-short
      hostname: httpbin
      port: 8000
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: httpbin-httproute
spec:
  parentRefs:
    - name: eg-http-waypoint
  hostnames:
    - httpbin.default.svc.cluster.local
    - httpbin.default.svc
    - httpbin.default
    - httpbin
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            add:
              - name: traversed-waypoint
                value: eg-http-gateway
      backendRefs:
        - name: httpbin
          port: 8000
